@@ -76,18 +76,11 @@ ADDRESS_FAX = Fax
 ADDRESS_E_MAIL = E-Mail
 ADDRESS_WEB = Web
 
-PAGE.LOGO.URL = ./images/logo.png
-PAGE.OF = of
-PAGE.PRODUCT.DATA.SHEET = Product data sheet
-PAGE.LEGAL = \
-    * RPR including VAT.\n\
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod\
-    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.\
-    At vero eos et accusam et justo duo dolores et ea rebum.\
-    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.\
-    Lorem ipsum dolor sit amet, consetetur sadipscing elitr,\
-    sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,\
-    sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.\
-    Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+PAGE_LOGO_URL = ./images/logo.png
+PAGE_OF = of
+PAGE_PRODUCT_DATA_SHEET = Product \u2116\r\nA0<span style="color:#FF0000">456</span>&4567&#x152;&#338;
+PAGE_LEGAL = 1:![PAGE_OF] 2:#[template[[#[name]]]] 3:#[PAGE_OF]
     
 SYSTEM_DATE = 01/01/2000
+
+INVALID.INVALID = INVALD
